--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <li class="nav-item mx-3">
                 <a class="nav-link " style="color: #363159;" href="">Request Demo</a>
               </li>
-              <button type="button"  class="btn mx-4 text-light download">Download now</button>
+              <button type="button"  class="btn mx-4 text-light download">START FOR FREE</button>
           </div>
         </div>
       </nav>
@@ -86,7 +86,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-md-6">
-                <img src="image/edozzier-app.png" class="app mx-5" alt="img-fluid">
+                <img src="image/edozzier-app.png" class="w-75 mx-5" alt="img-fluid">
             </div>
         </div>
     </div>
